--- a/css/practice.css
+++ b/css/practice.css
@@ -1,225 +1,515 @@
-html {
-    font-size: 625%;
-}
-
-body {
+html{
     margin: 0;
-    font-size: .13rem;
-    color: #fff;
-    font-size: .14rem;
-    background-color: #29bde0;
+    padding: 0;
+    font-size: 16px;
+    background-color: #fafafa;
 }
-
-body::-webkit-scrollbar {
-    display: none;
+body{
+    background-color: #fafafa;
 }
-
-.header {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    font-size: .18rem;
-    line-height: .5rem;
-    text-align: center;
-    background-color: #29bde0;
-    z-index: 1;
+header{
+    width: 100%;
 }
-
-.header .menu {
-    background: url(../img/img.png) no-repeat;
-    display: inline-block;
-    transform: scale(0.5);
+header div{
+    width: 1200px;
+    margin: 0 auto;
     height: 40px;
-    width: 39px;
-    background-position: 0 -209px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+header div p{
+    color: #a4d7be;
+    width: 188px;
     float: left;
-    margin-left: .1rem;
-    margin-top: 3px;
 }
 
-.header .cancel {
-    background: url(../img/img.png) no-repeat;
-    display: inline-block;
-    transform: scale(0.5);
-    height: 36px;
-    width: 36px;
-    background-position: 0 -163px;
+.contact{
+    width: 108px;
+    height: 25px;
+    display: flex;
+    justify-content: space-between;
     float: right;
-    margin-right: .1rem;
-    margin-top: 3px;
 }
-
-.body {
-    margin-top: .5rem;
-    margin-bottom: .9rem;
-    background-color: #29bde0;
+/* 微信图标 */
+.span1{
+    background-image: url(../img/图标.png);
+    height:24px;
+    width:25px;
+    background-position:-13px 0;
 }
+/* QQ图标 */
+.span2{
+    background-image: url(../img/图标.png);
+    height:24px;
+    width:25px;
+    background-position:-38px 0;
+}
+/* 微博图标 */
+.span3{
+    background-image: url(../img/图标.png);
+    height:24px;
+    width:25px;
+    background-position:-63px 0;
+}
+nav{
+    display: flex;
+    background-color: #29b078;
+    height: 100px;
+    width: 100%;
 
-.body .music {
+}
+nav div{
+    width: 1200px;
+    margin: 0 auto;
+}
+nav div a{
+    float: right;
+    color: white;
+    font-weight: 1000;
+    margin: 0 0 0 66px;
+    line-height: 98px;
+}
+nav div a:hover{
+    border-bottom: 2px solid white;
+}
+.carousel{
+    width: 100%;
+}
+.container{
+    width: 1200px;
+}
+.rwo{
+    width: 1200px;
+}
+.introduction{
+    width: 300px;
+    padding: 0 100px 0 0;
+    height: 225px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+.span4{
+    background-image: url(../img/图标.png);
+    height:62px;
+    width:43px;
+    background-position:-120px 0;
+    margin: 0 auto;
+}
+.span5{
+    background-image: url(../img/图标.png);
+    height:48px;
+    width:60px;
+    background-position:-215px 0;
+    margin: 0 auto;
+}
+.span6{
+    background-image: url(../img/图标.png);
+    height:55px;
+    width:52px;
+    background-position:-163px 0;
+    margin: 0 auto;
+}
+.span7{
+    background-image: url(../img/图标.png);
+    height:13px;
+    width:13px;
+    background-position:0 0;
+    margin-right: 2px;
+    float: left;
+    margin-top: 5px;
+
+}
+.number-people{
+    width: 200px;
+    height: 110px;
+    float: right;
     position: relative;
-    line-height: .5rem;
-    font-size: .12rem;
-    background-color: #b9e9f5;
-    color: #464646;
-    padding-left: .25rem;
+    margin-top: 90px;
+}
+.stay{
+    text-align: center;
+    font-weight: 900;
+    font-size: 18px;
+}
+.c70{
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    border: 1px solid #e6e7e6 ;
+}
+.map{
+    height: 70px;
+    width: 285px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+.span8{
+    background-image:url(../img/图标.png);
+    height:30px;
+    width:32px;
+    background-position:-88px 0;
+    margin: 20px 0 0 0;
+}
+.map p{
+    width: 150px;
+    font-size:14px;
+    padding: 14px 0 0 0;
+}
+.c70 p{
+    padding: 21px 0 0 30px;
+}
+.zhanwei-height-170{
+    height: 170px;
+    width: 1200;
+}
+.zhanwei-height-150{
+    height: 150px;
+    width: 1200px;
+}
+.zhanwei-height-70{
+    height: 70px;
+    width: 1200px;
+}
+.zhanwei-height-93{
+    height: 93px;
+    width: 1200px;
+}
+.excellent{
+    height: 377px;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    margin: 0 20px;
+    border: 1px solid #e6e7e6 ;
+    background-color: #ffffff;
+    border-radius: 6px;
+}
+.container{
+    max-width: 1200px;
+}
+.excellent img{
+    width: 110px;
+    height: 110px;
+    margin: 17px 0 0 70px;
+}
+.excellent div p{
+    display: block;
+    width: 200px;
+    margin: -10px auto 25px auto;
+}
+.cx4{
+    width: 72px;
+    height: 12px;;
+    margin: 24px auto 130px;
+}
+.cx4 div{
+    width: 12px;
+    height: 12px;
+    background-color: white;
+    border-radius: 50%;
+    float: left;
+    margin: 0 1.5px;
+    border: 2px solid #f5f5f5;
+}
+.cx4 div:first-child{
+    width: 12px;
+    height: 12px;
+    background-color: #29b078;
+    border-radius: 50%;
+}
+.cooperation{
+    width:1200px ;
+    height: 180px;
+    display: flex;
+    margin: 70px auto;
+
+}
+.cooperation div{
+    width: 300px;
+    height: 180px;
+    background-color: white;
+    display: flex;
+
+}
+.cooperation div img{
+    margin: auto;
+}
+.cooperation div:nth-child(3){
+    border: 2px solid #f5f5f5;
 }
 
-.body .music .audio {
-    width: .5rem;
-    position: absolute;
-    left: 0;
-    margin-right: -200px;
-    opacity: 0;
-    z-index: 2;
+.links{
+    background-color: white;
+
+}
+.links div{
+    width: 1200px;
+    margin: 0 auto;
+    background-color: white;
+
+}
+.links div ul{
+    display: flex;
+    justify-content: space-between;
+}
+.links div ul li a{
+    color: #999999;
+}
+.background-green{
+    background-color: #29b078;
+    color: white;
+
+}
+.background-green a{
+    font-size: 16px;
+    color: white;
+    padding-right: 20px;
+    line-height: 20px;
+}
+.width-1200{
+    width: 1200px;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 20px 0;
+    font-size: 16px;
+
 }
 
-.body .music .areuok {
-    background: url(../img/img.png) no-repeat;
-    display: inline-block;
-    transform: scale(0.5);
-    height: 52px;
-    width: 52px;
-    background-position: 0 -259px;
-    transform: scale(0.65);
-    float: right;
-    margin-right: .08rem;
-    cursor: pointer;
-    position: absolute;
-    right: 5px;
+.end-p{
+    text-align: center;
+}
+.width-1200 div:nth-child(2){
+    width: 400px;
 }
 
-.body .music .triangle {
-    position: absolute;
-    top: 35px;
-    left: .35rem;
-    border-width: 10px;
-    border-style: solid;
-    border-color: transparent #b9e9f5 transparent transparent;
-    transform: rotate(22deg);
+/* 8-2的css部分 */
+
+.show{
+    width:100% ;
+    height: 250px;
+    background-color: #f7a750;
+}
+.width-1200-2{
+    width: 1200px;
+    margin: 20px auto;
+    display: flex;
+}
+main li{
+    list-style-type: none;
+    height: 50px;
+
+}
+main li a{
+    color: #999999;
+}
+main ul{
+    padding: 0;
+    margin-top: 35px;
+}
+.c12{
+    width: 12px;
+    height: 12px;
+    border: 1px solid #f7a750;
+    border-radius: 50%;
+    margin-left: 106px;
+    margin-bottom: -17px;
+}
+.firm{
+    width: 306px;
+    height: 708px;
+    border-radius: 20px;
+    background-color: white;
+    text-align: center;
+    font-size: 14px;
+}
+.firm P{
+    font-size: 17px;
+    border-bottom: 1px solid #f7f7f7;
+    padding: 20px 0;
+}
+.deail{
+    width: 878px;
+    height: 1102px;
+    background-color: white;
+    margin-left:27px;
+    border-radius: 20px;
+}
+.deail div:first-child{
+    height: 156px;
+    border-bottom: 1px solid #999999;
+}
+.tudou-img{
+    float: left;
+    width: 245px;
+    height: 156px;
+    padding-left: 70px;
+
+}
+.deail p{
+    margin: 50px 74px;
+    font-size: 16px;
+    color: #999999;
+
+}
+li:nth-child(4) .c12{
+    background-color: #f7a750;
+}
+li:nth-child(4) a{
+    color: #ff8959;
 }
 
-.body .text {
-    padding-left: .28rem;
-    font-size: .12rem;
+/* 8-2的css部分 */
+
+.direction{
+    width: 1200px;
+    height: 60px;
+    padding-top: 16px;
+    border-bottom: 1px solid #edf1f2;
+    border-top: 1px solid #d0d6d9;
+}
+.direction a{
+    margin-right: 20px;
+}
+.direction span:first-child{
+    color: #999999;
+    padding-right: 10px;
+}
+.direction span:nth-child(2){
+    color: white;
+    background: #29b078;
+}
+.width-1200-3{
+    width: 1200px;
+    margin: 20px auto;
+    border-bottom: 1px solid #d0d6d9;
 }
 
-.body .flex {
-    margin-left: .1rem;
-}
-
-.body .flex .content {
+.font-end{
+    width: 1200px;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    list-style: none;
-    padding: 0;
+    /* justify-content: space-between; */
 }
-
-.body .flex .content .item {
-    height: 25vw;
-    width: 25vw;
-    margin-right: 3vw;
-    margin-bottom: 8vw;
-    font-size: .15rem;
-    text-align: center;
-    border: .5vw solid #fff;
+.main-content{
+    width: 388px;
+    height: 448px;
+    background-color: white;;
+    margin: 15px 6px;
+    border: 1px solid #e2e2e2;
 }
-
-.body .flex .content .item:hover .wrap {
-    display: flex;
-}
-
-.body .flex .content .item .id {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 70%;
-    margin: 0;
-    color: #565656;
-    background-color: #f5c97b;
-}
-
-.body .flex .content .item .num {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 30%;
-    margin: 0;
-    background-color: #83b09a;
-}
-
-.body .flex .content .item .wrap {
+.transparent{
+    position: relative;
+    top: -467px;
+    width: 386px;
+    height: 467px;
     display: none;
-    justify-content: space-between;
-    align-items: center;
-    height: 8vw;
-    margin-top: 1vw;
+    background-color: rgba(61, 61, 61, 0.801);
+    color: white;
+}
+.main-content:hover .transparent{
+    display: block;
 }
 
-.body .flex .content .item .wrap .photo1 {
-    width: 100%;
-    height: auto;
-    max-width: 5vw;
-    min-width: 5vw;
-}
 
-.body .flex .content .item .wrap .photo2 {
-    width: 100%;
-    height: auto;
-    max-width: 5vw;
-    min-width: 5vw;
-}
 
-.body .flex .content .item .wrap .photo3 {
-    width: 100%;
-    height: auto;
-    max-width: 5vw;
-    min-width: 5vw;
+.ios{
+    width: 77px;
+    font-size: 17px;
+    margin: 0 auto;
+    padding-top: 60px;
 }
-
-.body .flex .content .item .wrap .photo4 {
-    width: 100%;
-    height: auto;
-    max-width: 5vw;
-    min-width: 5vw;
+.transparent div{
+    height: 300px;
+    width: 300px;
+    margin: 66px auto;
+    font-size: 17px;
+    margin-bottom: 0;
 }
+.main-content img{
+    float: left;
+    margin: 20px 10px;
+}
+/* .main-content div:nth-child(2){
+    width: 174px;
+} */
+.main-content p:nth-child(2){
+    padding-top: 38px;
+}
+.main-content p:nth-child(3){
+    font-size: 14px;
+    padding-top: 10px;
+}
+table{
+    /* border: 1px solid black; */
+    margin-top: 28px;
+    font-size: 12px;
+    border-radius: 3px;
+}
+td{
+    width: 193px;
+}
+tr ,td {
+    border: 1px solid #e2e2e2;
+}
+tr{
+    height: 38px;
+    width: 38.5px;
+}
+#start1{
+    float: right;
+    margin: 2px 140px 0  0;
+}
+#start2{
+    margin: 2px 99px 0 0;
+    float: right;
+}
+#start3{
+    margin: 2px 0 0 0;
+    float: right;
+}
+.text-center{
+    text-align: center;
 
-.footer {
-    position: fixed;
+}
+.salary{
     display: flex;
-    box-sizing: border-box;
-    align-items: center;
-    justify-content: space-around;
-    height: .9rem;
-    padding-left: .25rem;
-    padding-right: .25rem;
-    background-color: #29bde0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    justify-content: space-between;
+    font-size: 15px;
+    border: 0;
+}
+tbody{
+    border: 0;
+}
+.color-gray{
+    color: gray;
+}
+.color-black{
+    color: black;
 }
 
-.footer::before {
-    position: absolute;
-    top: 0;
-    content: "";
-    width: 100%;
-    height: 1px;
-    background-color: #fff;
+
+td a:first-child{
+    padding-left: 12px;
+    padding-top: 6px;
+}
+td a:last-child{
+    padding-right: 12px;
+    padding-top: 6px;
+}
+td span{
+    color: red;
+    font-weight: 500;
+    font-size: 15px;
 }
 
-.footer .btn {
-    box-sizing: border-box;
-    width: 100%;
-    line-height: .45rem;
-    background-color: #fbb435;
-    border-radius: 0;
-    color: #fff;
-    font-size: .2rem;
-    letter-spacing: .05rem;
-    margin-bottom: .1rem;
-    border: none;
-}
+
+
+
+
