--- a/css/task10.css
+++ b/css/task10.css
@@ -8,8 +8,8 @@ html{
 .login{
     display:flex;
     justify-content: space-between;
-    padding-left:18.6%;
-    padding-right:18.6%;
+    padding-left:18.7%;
+    padding-right:18.7%;
     background-color:#1d7ad9;
     color:white;
 }
@@ -32,15 +32,20 @@ html{
     padding-top:0.05rem;
     border-left:1px solid white;
 }
+.loginin{
+    width:53px!important;
+}
 .signin{
     color:black!important;
     background-color:white;
+    width:103px!important;
 }
 /*title*/
 .title{
-    padding:3% 18.6% 0 53.5%;
+    padding-right:18.7%;
     background-color:#f9f9f9;
-    height:1.3rem;
+    height:1rem;
+    padding-top:30px;
 
 }
 @media screen and (max-width: 1080px){
@@ -49,7 +54,9 @@ html{
     }
 }
 .bt1{
-    margin-left:0.29rem;
+    margin-left:0.7rem;
+    border-top:none;
+    border-left:none;
 }
 @media screen and (max-width: 1080px){
     .bt1{
@@ -57,11 +64,15 @@ html{
     }
 }
 .bt2{
-    background-color:#1d7ad9;
+    background-color:#1d7ad9!important;
+    border-top:none;
+    border-left:none;
 }
 /*进度条*/
 .self-order{
+    padding-left:50%;
     margin-right:18.6%;
+    margin-top:132px;
 }
 @media screen and (max-width: 1080px){
     .self-order{
@@ -72,10 +83,11 @@ html{
 }
 .progress1{
     width:6rem;
-    margin-right:18.6%;
-    margin-top:0.3rem;
     height:0.1rem;
     background-color:#cccccc;
+}
+.bar1{
+    background-color:#ff7f02;
 }
 @media screen and (max-width: 1080px){
     .progress1{
@@ -132,15 +144,30 @@ html{
 /*定制纸箱*/
 .orderbystep{
     margin-left:18.6%;
-    padding-top:1rem;
+    padding-top:39px;
     margin-right:18.6%;
+    font-size:18px;
+}
+.orderbystep h5{
+    font-size:22px;
+}
+.noborder{
+    border-top:none;
 }
 .chosebox{
     color:#1d7ad9!important;
-    font-weight: bold;
+    font-size:18px;
+    font-weight:600;
+    border:none;
+}
+.chosebox img{
+    margin-right:9px;
 }
 .chosebox1{
     padding-top:12px;
+}
+.chosebox1 label{
+    margin-left:35px;
 }
 @media screen and (max-width: 1080px){
     .chosebox1{
@@ -160,6 +187,9 @@ html{
 }
 .chosebox1 label{
     font-weight:normal;
+}
+.length{
+    margin-left:40px;
 }
 .chosebox1 input[type="radio"] + label::before {
     content: "\a0"; /*不换行空格*/
@@ -197,9 +227,27 @@ html{
         width:1rem;
     }
 }
+.details1{
+    color:#dadada;
+    background: white;
+    border:1px solid #dadada;
+    height:0.4rem;
+}
+@media screen and (max-width: 465px){
+    .details1{
+        color:#dadada;
+        background: white;
+        border:1px solid #dadada;
+        height:0.4rem;
+        width:1rem;
+        margin-top:200px;
+            }
+}
+
 /*选择箱型*/
 .size{
     margin-top:-22px;
+
 }
 .size1{
     width:1rem;
@@ -220,12 +268,14 @@ html{
 /*选择材质*/
 .size3{
     margin-top:-22px;
-}
+    }
 .chosebox3{
-    padding-top:12px;
+    padding-top:42px;
+    margin-bottom:30px;
 }
 .boxtype1 label{
     font-weight:normal;
+    margin-left:35px;
 }
 .boxtype1 input[type="checkbox"] + label::before {
     content: "\a0"; /*不换行空格*/
@@ -250,16 +300,16 @@ html{
 }
 /*下一步*/
 .next-step{
-    height:3rem;
-    display: flex;
+    height:287px;
+    display:flex;
     justify-content: center;
     align-items: center;
 }
 .btn1{
-    width:2rem;
+    width:1.76rem;
     color:white;
-
-}
+    font-size:24px;
+    }
 /*footer*/
 footer{
     position: relative;
@@ -296,6 +346,7 @@ footer a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    font-size:18px;
 }
 .cc2 a{
     border-right:2px solid white;
@@ -305,6 +356,13 @@ footer a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+.middle1 a{
+    padding-right:15px;
+    text-decoration: none;
+}
+.middle1 a:hover{
+    color:#3985db;
 }
 .copyright{
     height:0.3rem;
@@ -316,6 +374,9 @@ footer a{
     left:0;
     right:0;
     width:100%;
+}
+.copyright span {
+padding-left:20px;
 }
 @media screen and (max-width: 1080px){
     .copyright{
