--- a/css/task7.css
+++ b/css/task7.css
@@ -58,6 +58,7 @@ h3  {
     width:0.1rem;
     height:0.1rem;
     display:inline-block;
+
 }
 .circle1{
     background-color:lightgray;
@@ -65,4 +66,5 @@ h3  {
     width:0.1rem;
     height:0.1rem;
     display:inline-block;
+    border:0.01rem solid lightgrey;
 }
