--- a/css/task8.css
+++ b/css/task8.css
@@ -79,7 +79,7 @@ header{
     white-space: nowrap;
 }
 .frontpage{
-   margin-right:-32px;
+    margin-right:-32px;
 }
 .dp{
     display: none;
@@ -138,7 +138,7 @@ main{
 .wearegood{
     height:2.2rem;
     color:lightgrey;
-    }
+}
 .wearegood1{
     height:2.2rem;
     color:lightgrey;
@@ -149,10 +149,10 @@ main{
 }
 @media screen and (max-width: 1080px){
     .ct1{
-        margin-top:1.63rem;
-        width:100%;
+
+        width:320px;
         font-size:16px;
-        margin-left:10px;
+       margin:1.63rem auto;
     }
     .wearegood{
         height:2.2rem;
@@ -221,30 +221,33 @@ h5{
     font-weight: bold;
 }
 .howtolearn{
-    height:2.3rem;
-    margin-left:16.6%;
-    margin-right:18.6%;
-    position: relative;
+    width:1200px;
+    height:60px;
      }
-@media screen and (max-width: 1080px){
+.howtolearn1{
+    width:1200px;
+    height:120px;
+}
+@media screen and (max-width:1080px ){
     .howtolearn{
-        height:2.3rem;
-        margin-left:1px;
-        margin-right:18.6%;
-        position: relative;
-        width:100%;
+        width:320px;
+        height:60px;
+    }
+    .howtolearn1{
+        width:320px;
+        height:120px;
     }
 }
-.onetofour {
-    display: flex;
-    justify-content: space-between;
-    margin-top:0.5rem;
+.container{
+    max-width: 1200px;
 }
-@media screen and (max-width: 1080px){
-    .onetofour {
-        display: flex;
-        flex-direction: column;
-        margin-top:0.5rem;
+.row{
+    width:1200px;
+}
+@media screen and (max-width:1080px ){
+    .row{
+        width:320px;
+        margin:0 auto;
     }
 }
 .num{
@@ -254,25 +257,23 @@ h5{
      color:#29b078;
      border:1px solid lightgrey;
      padding-right:20px;
+     padding-top:10px;
      margin-right:10px;
      box-shadow:1px 1px 3px lightgrey;
      display:flex;
      align-items: center;
-    padding-left:20px;
-    font-size:18px;
+     padding-left:20px;
+     font-size:17px;
 }
 .arrow{
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    width:3.2rem;
-    font-size:12px;
-    padding-left:40px;
+    position: relative;
+    height: 70px;
+    width: 295px;
 }
-.arrow div{
-    margin-right:10px;
- }
 @media screen and (max-width: 1080px){
+
     .arrow{
         display:flex;
         justify-content: flex-start;
@@ -289,22 +290,27 @@ h5{
         padding-left:2px;
     }
     .num{
-        width:50px;
-        height:50px;
+        width: 70px;
+        height: 70px;
         border-radius: 50%;
-        color:#29b078;
-        border:1px solid lightgrey;
-        padding-right:20px;
-        margin-right:10px;
-        box-shadow:1px 1px 3px lightgrey;
+        border: 1px solid #e6e7e6 ;
         display:flex;
-        align-items: center;
-        padding-left:20px;
-        font-size:18px;
+        justify-content: center;
     }
+
 }
 .arrow p{
     font-size:14px;
+    margin-top:5px;
+}
+.zw{
+    margin-top:10px;
+}
+.arrow1{
+    background:url("../img/形状拷贝2.png") no-repeat 2px 0;
+    height:30px;
+    width:50px;
+    margin: 10px 0 0 0;
 }
 .students{
     height: 368px;
@@ -321,11 +327,8 @@ h5{
 }
 @media screen and (max-width: 1080px){
     .show{
-        margin-top:4.4rem;
+        margin-top:1.4rem;
     }
-}
-.showone{
-    margin-left:345px;
 }
 @media screen and (max-width: 1080px){
     .showone{
@@ -358,16 +361,19 @@ h5{
     margin-top:1rem;
 }
 .company{
-    margin-left:18.7%;
-    margin-right:18.7%;
+    width:12rem;
     box-shadow:1px 1px 1px lightgrey;
-    width:11.68rem;
+    display: flex;
+    justify-content: space-between;
+
 }
-.company a{
-    width:2.3rem;
-    height:2rem;
+.company a {
+    height: 2rem;
+    width:2.37rem;
     display: inline-block;
+    padding-left:20px;
 }
+
 .company a:hover{
     box-shadow:1px 1px 1px 1px lightgrey;
 }
@@ -394,13 +400,12 @@ h5{
     }
 /*友情链接*/
 .links{
-    margin-top:1.14rem;
-    margin-left:290px;
-    margin-right:18.7%;
+
+    width:1200px;
+    margin: 1rem auto;
 }
 .links h5{
    margin-bottom:30px;
-   margin-left:70px;
 }
 .links ul{
      display:flex;
