--- a/css/task8-3.css
+++ b/css/task8-3.css
@@ -122,8 +122,6 @@ header{
 main{
     position: relative;
     margin-top:1.7rem;
-    padding-left:18.7%;
-    padding-right:18.7%;
 }
 @media screen and (max-width: 1080px){
     main{
@@ -134,8 +132,8 @@ main{
     }
 }
 .slidebar{
-
-    width:11.7rem;
+    margin:0 auto;
+    width:12rem;
     right:0;
     left:0;
     padding-top:0.3rem;
@@ -212,7 +210,7 @@ main{
     }
 }
 .matt{
-    width:1230px;
+    width:1200px;
 }
 @media screen and (max-width: 1080px){
     .matt{
