--- a/css/task10.css
+++ b/css/task10.css
@@ -50,8 +50,28 @@ html{
 }
 @media screen and (max-width: 1080px){
     .title{
-        padding:10% 1% 0 5%;
+      display: flex;
+        flex-direction: column;
+        height:2rem;
+        width:200px;
+        align-items: flex-start;
+        justify-content: space-between;
+
+
     }
+    .bt2{
+        margin-left:0.1rem;
+        border-top:none;
+        border-left:none;
+        width:100px;
+    }
+    .bt1{
+        margin-left:1px;
+        border-top:none;
+        border-left:none;
+        width:100px;
+    }
+
 }
 .bt1{
     margin-left:0.7rem;
@@ -76,9 +96,10 @@ html{
 }
 @media screen and (max-width: 1080px){
     .self-order{
-        width:100%;
+        width:300px;
         margin:0 auto;
-        padding-left:18.6%;
+        margin-top:3rem;
+        padding-left:0;
     }
 }
 .progress1{
@@ -277,7 +298,7 @@ html{
     font-weight:normal;
     margin-left:35px;
 }
-.boxtype1 input[type="checkbox"] + label::before {
+.boxtype1 input[type="radio"] + label::before {
     content: "\a0"; /*不换行空格*/
     display: inline-block;
     vertical-align: middle;
@@ -290,11 +311,11 @@ html{
     text-indent: .15em;
     line-height: 1;
 }
-.boxtype1 input[type="checkbox"]:checked + label::before {
+.boxtype1 input[type="radio"]:checked + label::before {
     background-color:white;
     border:7px solid #1d7ad9;
 }
-.boxtype1 input[type="checkbox"]{
+.boxtype1 input[type="radio"]{
     position: absolute;
     clip: rect(0, 0, 0, 0);
 }
