--- a/css/task8-2.css
+++ b/css/task8-2.css
@@ -2,52 +2,18 @@ html{
     font-size:625%;
 }
 /*header*/
-header{
-    position:absolute;
-    width:100%;
-    left:0;
-    right:0;
-    top:0;
-    height:2rem;
-    z-index:999;
-}
-/*客服热线以及三个图标*/
-.followus{
-    display:flex;
-    justify-content: space-between;
-    align-items: center;
-    width:100%;
-    padding-left:18.7%;
-    padding-right:18.7%;
-    color:#29b078;
-    background:white;
-    font-size:14px;
-}
-.login{
-    display: none;
-}
-@media screen and (max-width: 1080px){
-    .followus{
-        display:none;
-    }
-    .login{
-        display: block;
-        height:36px;
-        margin-left:80%;
-        padding-top:10px;
-    }
-    .login1{
-        border-right:1px solid #29b078;
-        padding-right:5px;
-    }
-    .login a{
-        color:black;
-    }
-}
 .followus a{
     width:0.3rem;
     height:0.3rem;
     display:inline-block;
+}
+.followus{
+    color:#29b078;
+    font-size:0.14rem;
+}
+.followus p{
+   padding-top:0.07rem;
+    display: inline-block;
 }
 .wechat{
     background:url("../img/wechat.png") no-repeat right bottom;
@@ -58,13 +24,37 @@ header{
 .sina{
     background:url("../img/sina.png") no-repeat right bottom;
 }
+/*手机页面导航*/
+@media screen and (max-width: 1080px){
+    .followus{
+        display:none;
+    }
+    .login{
+        display:block!important;
+        width:100%;
+        text-align: right;
+        padding-right:3%;
+
+    }
+    .login1{
+        border-right:1px solid #29b078;
+        padding-right:5px;
+    }
+    .login a{
+        color:black;
+    }
+}
+.login{
+    display: none;
+}
 /*导航栏*/
+.btl{
+    background:#29b078;
+}
 .navigation{
-    position:absolute;
-    background:#29b078 url("../img/jinengshu.png") no-repeat 20% center;
+    background:#29b078 url("../img/jinengshu.png") no-repeat 4% center;
     width:100%;
     height:1.01rem;
-    padding-right:18.7%;
 }
 .navigation a{
     display:block;
@@ -89,6 +79,7 @@ header{
         display: block;
         float:right;
         margin-top:0.1rem;
+        z-index:999;
     }
 }
 @media screen and (max-width:1080px) {
@@ -119,12 +110,7 @@ header{
 .hidden{
     z-index:999;
 }
-.faster{
-    margin-top:1rem;
-    padding-left:2%;
-    width:100%;
-    background-color:#f1a750;
-}
+
 @media screen and (max-width:1080px ){
     .faster{
         margin-top:0.7rem;
@@ -134,7 +120,7 @@ header{
     }
 }
 main{
-    margin-top:4rem;
+    margin-top:0.5rem;
 }
 .firstpage span{
     color:#29b078;
@@ -184,7 +170,15 @@ main{
 .company li:hover{
     list-style-image:url("../img/椭圆8.png")!important;
 }
-
+.faster{
+    width:100%;
+    background-color:#f1a750;
+}
+@media screen and (max-width:1080px ){
+   .faster{
+    margin-top:0.8rem;
+   }
+}
 /*content*/
 .content1{
     box-shadow:2px 2px 2px 2px lightgrey;
@@ -211,6 +205,7 @@ main{
 }
 .row{
     width:1200px;
+    margin:0 auto;
 }
 @media screen and (max-width: 377px){
     .maincontent{
@@ -278,8 +273,6 @@ footer a:hover{
     padding-top:0.37rem;
     display:flex;
     justify-content: space-between;
-    padding-left:18.7%;
-    padding-right:18.7%;
 }
 .left1{
     display: flex;
@@ -310,7 +303,7 @@ footer a:hover{
         padding-right:12%;
     }
     footer{
-        height:3.2rem;
+        height:4rem;
     }
 }
 @media screen and (max-width:1080px){
@@ -322,6 +315,6 @@ footer a:hover{
         border-top:1px solid #32c086;
     }
 }
-.company{
-    color:#32c086;
+.container{
+    max-width:1200px;
 }
