--- a/css/task11.css
+++ b/css/task11.css
@@ -1,4 +1,14 @@
 @charset "utf-8";
+.pumant {
+  left: 0;
+  right: 0;
+  top: 0;
+}
+.pumanb {
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 * {
   margin: 0;
   padding: 0;
@@ -44,12 +54,12 @@ html {
   padding-left: 60px;
 }
 body {
-  background-color: #eff0f4;
+  background-color: #f0f0f0;
 }
 header {
   top: 0;
   position: fixed;
-  background: #5fc0cd;
+  background: #29bde0;
   height: 0.88rem;
   line-height: 0.32rem;
   font-size: 32px;
@@ -85,7 +95,7 @@ main .content .login1 {
 }
 .login .login1 {
   margin-top: 0.1rem;
-  color: #eff0f4;
+  color: #f0f0f0;
   height: 1rem;
 }
 .login input {
@@ -99,7 +109,7 @@ main .content .login1 {
   border: 0 none;
 }
 .login input::placeholder {
-  color: #eff0f4;
+  color: #f0f0f0;
   font-size: 32px;
 }
 .text {
@@ -125,7 +135,7 @@ main .content .login1 {
 .code a {
   float: right;
   display: inline;
-  color: #5fc0cd;
+  color: #29bde0;
   padding: 0 0.1rem 0 0;
   font-size: 32px;
   margin-top: 0.1rem;
