--- a/css/task7-3.css
+++ b/css/task7-3.css
@@ -80,7 +80,7 @@ footer{
     text-align:center;
     width:100%;
     height:1.5rem;
-    background:url("../img/图层2.png")no-repeat center top;
+    background:url("../img/youwin.png")no-repeat center top;
     background-size:2rem 1.5rem;
         font-size:0.28rem;
     color:white;
@@ -94,6 +94,7 @@ footer{
     font-size:0.2rem;
     color:#ffc865;
     padding:0.1rem 0.28rem 0 0.4rem;
+
 }
 .outcome span{
      font-size:0.28rem;
