--- a/css/task8-3.css
+++ b/css/task8-3.css
@@ -242,6 +242,7 @@ main{
     .carrer1{
         margin:0 auto;
         width:100%;
+        padding:0 0;
     }
     .carrer2{
         width:100%;
@@ -252,8 +253,8 @@ main{
 .transparent{
     position:absolute;
     top:0.01rem;
-    height:414px;
-    width:100%;
+    height:96.25%;
+    width:96.25%;
     background:rgba(61,61,61,0.800);
     color:white;
     text-align:center;
@@ -261,6 +262,21 @@ main{
     padding:0.5rem 0.5rem;
     animation:myfirst 5s;
     transform:none;
+}
+@media screen and (max-width: 1080px){
+    .transparent{
+        position:absolute;
+        top:0.01rem;
+        height:100%;
+        width:100%;
+        background:rgba(61,61,61,0.800);
+        color:white;
+        text-align:center;
+        display:none;
+        padding:0.5rem 0.5rem;
+        animation:myfirst 5s;
+        transform:none;
+    }
 }
 @keyframes myfirst
 {
