--- a/less/bl.less
+++ b/less/bl.less
@@ -1,5 +1,12 @@
 @charset "utf-8";
-@link_color:#ffffff;
-@link_hover:orange;
-@body_bgc:#eff0f4;
-@main_bgc:#5fc0cd;
+@link_color:#696e78;
+@link_hover:#fa7f40;
+@body_bgc:#f0f0f0;
+@main_bgc:#29bde0;
+@button_y:#fbb435;
+@button_r:#f66f6f;
+@font-grey:#c2c2c2;
+@main-width:1080px;
+@lw-width:750px;
+@rw-width:230px;
+@main-w:600px;
