--- a/less/task12.less
+++ b/less/task12.less
@@ -1,127 +1,177 @@
 @charset "utf-8";
 //less库
 @import "z";
-//公用的变量
-@import "bl";
-.space{
-  display:flex;
-  justify-content: space-between;
+@import "font-awesome";
+@import "css3";
+//全局变量
+.main_bg{
+  background-color:#5fc0cd;
 }
-.puman{
-  width:100%;
+.font_c{
+  color:#999999;
+}
+.font-face{
+  font-family: stheitisc;
+  src:url("../stheitisc.ttf");
+}
+html{
+  font-size:625%;
 }
 .padding{
-  padding-left:4%;
-  padding-right:4%;
+  padding:0 4%;
 }
-.border{
-  border:1px solid lightgrey
-}
-.reset();
-html {
-  font-size: 625%;
+body{
+  font-face{
+    .font-face;
+  }
 }
 //header
 header{
-  @h:0.82rem;
-  .space;
-  .fix();
-  z-index:999;
-  background-color: @main_bgc;
-  color:white;
+   .flexb;
+   .padding;
+  .pumant;
+  .main_bg;
+  .txt-ver(1.28rem);
   .font-s(0.32rem);
-  line-height: 0.32rem;
-  padding: 0.22rem;
-  .puman;
+  color:white;
+}
+.content {
+  .section {
+    .bg-nc("../img/head.png");
+    background-size: cover;
+    .w100;
+    .rel;
+    height: 3.2rem;
+    .padding;
+    .head {
+      .abs;
+      margin-top: 0.78rem;
+      img {
+        .db;
+        max-width: 100%;
+        height: auto;
+      }
+    }
+    .info {
+      .rel;
+      top: 40%;
+      .font-s(0.24rem);
+      color: white;
+      left: 2.09rem;
+    }
+    .location {
+      .bg-nc("../img/Shape 4.png", left, center);
+      background-size: 0.16rem 0.16rem;
+      .font-s(0.14rem);
+      padding-left: 0.2rem;
+    }
+  }
+}
+  .form {
+    .formtitle {
+      .db;
+      .flex;
+      align-items: center;
+      .font-s(0.24rem);
+      height: 0.98rem;
+      border-bottom: 1px solid #ccc;
+      span {
+        .db;
+        margin-left: 0.3rem;
+        padding-left: 0.28rem;
+        border-left: 0.02rem solid #5fc0cd;
+        line-height: 0.39rem;
+      }
+    }
+    ul{
+      .list-sn;
+         }
+    .formlist{
+      li{
+        height:1.01rem;
+      }
+    }
+    .formtag{
+      .dib;
+      padding-left:0.28rem;
+      margin-left:0.2rem;
+      background: url("../img/starbig.png") no-repeat left center;
+    }
+    .formtag1{
+      .dib;
+      padding-left:0.28rem;
+      border-right:1px solid lightgrey;
+      padding-right:0.19rem;
+      background: url("../img/starbig.png") no-repeat left center;
+
+    }
+    .require{
+      .flex;
+      align-items: center;
+    }
+    .lable{
+      border-top:1px solid lightgrey;
+      .span1{
+        .font-s(0.17rem);
+        color:#999999;
+        margin-left:0;
+        padding-right:0.29rem;
+        border-right:1px solid lightgrey;
+        height:0.28rem;
+        .dib;
+        width:28%;
+        white-space: nowrap;
+      }
+      span{
+        .font-s(0.17rem);
+        margin-left:0.22rem;
+
+      }
+      .flex;
+      align-items: center;
+       span{
+         .dib;
+       }
+      .small{
+        .font-s(0.08rem);
+        width:71%;
+      }
+    }
+    .red{
+      color:#e26163;
+    }
+  }
+footer{
+  .flexb;
+  border-top:1px solid lightgrey;
   .padding;
-  height:@h;
-  .pip{
-    width:30px;
-    height:60px;
-    .d-ib();
-  }
-  }
-//main
-//看护人头像
-main{
-  .abs();
-  left: 0;
-  right: 0;
-  top:0.82rem;
-  .content{
-    .font-s(0.36rem);
-    .section{
-      background: url("../img/head.png") no-repeat center;
-      .padding;
-      color:white;
-      .puman;
-      background-size: cover;
-      height:3.2rem;
-      .rel();
-    }
-  }
+     div{
+       width:48%;
+       padding-top:0.1rem;
+       height:0.57rem;
+     }
 }
-.info{
+.footerleft{
   .rel();
-    left:2.3rem;
-    top:1.15rem;
+  margin-top:0.3rem;
+  color:#5fc0cd;
+  font-size:0.18rem;
+  background-color:white;
+  border:0.01rem solid #5fc0cd;
+  border-radius: 5px;
+  .w100;
+  .h100;
 }
-.head{
-  .abs();
-  top:0.8rem;
-}
-.location{
-  background:url("../img/Shape 4.png") no-repeat left center;
-  background-size: 0.16rem 0.16rem;
-  .font-s(0.24rem);
-  padding-left:0.3rem;
-}
-//专业技能
-.form {
-  @h: 1rem;
-  .formtitle {
-    line-height: 0.3rem;
-    margin: 30px 0;
-    padding-left: 30px;
-    border-left: 2px solid @main_bgc;
-    .font-s(0.32rem);
-    margin-left: 4%;
+.footerright{
+  .rel();
+  margin-top:0.3rem;
+  color:white;
+  font-size:0.18rem;
+  background-color:#5fc0cd;
+  border:none;
+  border-radius: 5px;
+  .w100;
+  .h100;
   }
-  .formlist {
-    width: 100%;
-    li {
-      height: 1rem;
-      overflow: auto;
-    }
-  }
-  .require {
-    .puman;
-    border-top: 1px solid lightgrey;
-    height: @h;
-    padding-top: 30px;
-    padding-left: 8%;
-  }
-  .formtag {
-    .d-i();
-    background: url("../img/starbig.png") no-repeat left center;
-    padding-left: 42px;
-    .font-s(0.31rem);
-    & span {
-      padding-right: 0.3rem;
-      border-right: 0.01rem solid #ccc;
-    }
-  }
-  .lable{
-   height:@h;
-    & span{
-      .d-ib();
-    }
-    .small{
-      .fr();
-      width:220px;
-      height:100px;
-      padding-right:30%;
-      .font-s(24px);
-    }
-  }
-}
+
+
